# Into3D

./: .gitignore  Boxy.cpp  Boxy.h  CMakeLists.txt  Camera3D.cpp  Camera3D.h  Into3D.sln  Into3D.vcxproj  Into3D.vcxproj.filters  README.md  Shader.cpp  Sky.cpp  Sky.h  SmartThing.cpp  SmartThing.h  Source.cpp  WindowPainter.cpp  WindowPainter.h  imgui.ini
defaultShaders/: fragmentShader.frag  geometryShader.geom  vertexShader.vert
includes/: Boxy.h  Camera3D.h  Shader.h  Sky.h  WindowPainter.h
resources/: Boxy.cpp  Camera3D.cpp  Sky.cpp  SmartThing.cpp  WindowPainter.cpp
starShaders/: fragmentShader.frag  geometryShader.geom  vertexShader.vert
